# iink

./: index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.js.timestamp-1676793501952.mjs
src/: App.jsx  Todo.css  Todo.jsx  Todo.md  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  store.rs
src-tauri/src/display/: mod.rs  transparentify.rs
src/Component/: Board.jsx  BoardStore.js  Pen.jsx  PenStore.js  Pointer.drawer.js  Pointer.jsx  PointerStore.js  index.jsx
src/hooks/: resize.js
src/lib/: Board.js  FloatingButton.js  Pen.js  Pen.jsx  Pointer.js  index.js
src/store/: index.js
src/utils/: hotkey.js  index.js  uuid.js
